--- a/package.json
+++ b/package.json
@@ -6,7 +6,18 @@
   "scripts": {
     "server-dev": "cd server && next dev -p 3001",
     "client-dev": "cd client && next dev -p 3000",
-    "export": "cd client && next build && next export"
+    "export": "cd client && next build && next export",
+    "compile": "tsc",
+    "compile:watch": "tsc -w",
+    "dev": "next dev",
+    "lint": "eslint . --ext .ts,.tsx",
+    "prettify": "prettier --write **/*.tsx",
+    "preserve": "npm run build",
+    "serve": "npx serve out",
+    "presync": "npm run build",
+    "sync": "npx cap sync",
+    "android": "npx cap run android",
+    "ios": "npx cap run ios"
   },
   "repository": {
     "type": "git",
